k8s/falco/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: falco
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
