k8s/falco/falco-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: falco
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-dns-egress
  namespace: falco
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-egress-policy
  namespace: falco
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falco
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: falcosidekick
            k8s:io.kubernetes.pod.namespace: falco
      toPorts:
        - ports:
            - port: "2801"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "falcosecurity.github.io"
        - matchPattern: "*.ghcr.io"
        - matchPattern: "ghcr.io"
        - matchPattern: "*.githubusercontent.com"
        - matchPattern: "*.sigstore.dev"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falcosidekick-policy
  namespace: falco
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falcosidekick
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: falco
            k8s:io.kubernetes.pod.namespace: falco
      toPorts:
        - ports:
            - port: "2801"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: gateway
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-prometheus-ingress
  namespace: falco
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falco
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8765"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falcosidekick-prometheus-ingress
  namespace: falco
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falcosidekick
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "2801"
              protocol: TCP
